--- a/minimal/index.html
+++ b/minimal/index.html
@@ -335,7 +335,7 @@
         </div>
       </section>
 
-      <section id="capabilities" class="py-20">
+      <section id="capabilities" class="py-16">
         <div class="text-center mb-12">
           <h2
             class="text-3xl md:text-4xl font-bold"
@@ -403,7 +403,7 @@
         </div>
       </section>
 
-      <section id="why" class="py-20">
+      <section id="why" class="py-16">
         <div class="text-center mb-12">
           <h2
             class="text-3xl md:text-4xl font-bold"
@@ -455,7 +455,7 @@
         </div>
       </section>
 
-      <section id="timeline" class="py-20">
+      <section id="timeline" class="py-16">
         <div class="text-center mb-12">
           <h2
             class="text-3xl md:text-4xl font-bold text-center"
@@ -512,7 +512,7 @@
         </div>
       </section>
 
-      <section id="case-studies" class="py-20">
+      <section id="case-studies" class="py-16">
         <div class="text-center mb-12">
           <h2
             class="text-3xl md:text-4xl font-bold"
@@ -530,101 +530,10 @@
             approach different challenges.
           </p>
         </div>
-        <div class="grid md:grid-cols-3 gap-6">
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="100"
-          >
-            <span class="text-sm font-semibold text-primary">CASE STUDY</span>
-            <h3 class="text-xl font-semibold mt-2">
-              Demand Forecasting for "UrbanHarvest"
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Problem:</strong> A D2C grocery startup
-              needed to decide which of 5 new neighborhoods to expand into, but
-              had no historical sales data.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Experiment (7 days):</strong> We built a
-              micro-funnel combining hyper-local search ads with a simple
-              waitlist landing page. By analyzing cost-per-signup and
-              demographic signals, we modeled demand.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Outcome:</strong> Delivered a ranked list
-              of neighborhoods with a 75% confidence score, saving an estimated
-              $50k in a potential failed launch.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">7 Days</span>
-              <span class="pill text-xs">$50k Saved</span>
-              <span class="pill text-xs">75% Confidence</span>
-            </div>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="200"
-          >
-            <span class="text-sm font-semibold text-primary">WORKFLOW MVP</span>
-            <h3 class="text-xl font-semibold mt-2">
-              🛰️ Spatial QA & Monitoring
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Challenge:</strong> Construction company
-              needed automated progress tracking from drone imagery and point
-              clouds.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Solution:</strong> Built a workflow MVP
-              that processes 3D data into measurements and exception flags,
-              integrated with their existing project management tools.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Impact:</strong> Reduced manual QA time
-              by 60% and caught 3 critical issues before they became expensive
-              problems.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">Computer Vision</span>
-              <span class="pill text-xs">60% Time Saved</span>
-            </div>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="300"
-          >
-            <span class="text-sm font-semibold text-primary">AUTOMATION</span>
-            <h3 class="text-xl font-semibold mt-2">
-              ⚙️ Field Ops Digitization
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Problem:</strong> Manufacturing client
-              had 200+ manual checklists across 5 facilities, leading to
-              compliance gaps and data silos.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Approach:</strong> Created digital forms
-              with conditional logic, auto-generated reports, and real-time
-              dashboards for management visibility.
-            </p>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Result:</strong> 100% digital compliance
-              tracking, 40% faster reporting, and eliminated 12 hours/week of
-              manual data entry.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">Digital Forms</span>
-              <span class="pill text-xs">40% Faster</span>
-              <span class="pill text-xs">12hr/week Saved</span>
-            </div>
-          </article>
-        </div>
+        <div id="projects-preview-grid" class="grid md:grid-cols-3 gap-6">
       </section>
 
-      <section id="insights" class="py-20">
+      <section id="insights" class="py-16">
         <div class="text-center mb-12">
           <h2
             class="text-3xl md:text-4xl font-bold"
@@ -641,139 +550,13 @@
             Our thoughts on building, validating, and shipping effectively.
           </p>
         </div>
-        <div class="grid md:grid-cols-3 gap-6">
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="slide-up"
-            data-aos-delay="100"
-          >
-            <div
-              class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mb-4"
-            >
-              <span class="text-2xl">📊</span>
-            </div>
-            <h3 class="text-xl font-semibold">
-              Standing Up a Demand Forecast in a Week
-            </h3>
-            <p class="text-sm text-muted mt-3">
-              Signals to use, what to ignore, and how to decide with confidence
-              when you have zero historical data. A practical guide from our
-              UrbanHarvest experiment.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">Data Science</span>
-              <span class="pill text-xs">Validation</span>
-            </div>
-            <a
-              href="#"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="slide-up"
-            data-aos-delay="200"
-          >
-            <div
-              class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mb-4"
-            >
-              <span class="text-2xl">🤖</span>
-            </div>
-            <h3 class="text-xl font-semibold">
-              When is AI the Right Tool for a Workflow MVP?
-            </h3>
-            <p class="text-sm text-muted mt-3">
-              Hint: It's not always the answer. A decision framework for when to
-              use off-the-shelf automation vs. custom models vs. good
-              old-fashioned code.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">AI Strategy</span>
-              <span class="pill text-xs">Decision Framework</span>
-            </div>
-            <a
-              href="#"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="slide-up"
-            data-aos-delay="300"
-          >
-            <div
-              class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mb-4"
-            >
-              <span class="text-2xl">🏗️</span>
-            </div>
-            <h3 class="text-xl font-semibold">3D Data Science in Practice</h3>
-            <p class="text-sm text-muted mt-3">
-              From scans & imagery to measurements and exception flags. A
-              practical guide for construction and industrial ops teams getting
-              started with spatial data.
-            </p>
-            <div class="mt-4 flex items-center gap-2">
-              <span class="pill text-xs">Computer Vision</span>
-              <span class="pill text-xs">Construction Tech</span>
-            </div>
-            <a
-              href="#"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-        </div>
-
+        <div id="blogs-preview-grid" class="grid md:grid-cols-3 gap-6">
         <!-- <div class="mt-16 text-center" data-aos="fade-up" data-aos-delay="400">
           <div class="glass rounded-2xl p-8 max-w-2xl mx-auto">
             <h3 class="text-2xl font-bold mb-3">Stay in the Loop</h3>
             <p class="text-muted mb-6">
-              Get practical insights on rapid prototyping, AI experiments, and
-              workflow automation delivered to your inbox. No fluff, just
-              actionable takeaways.
+              Get practical insights on rapid prototyping, AI experiments, and workflow
+              automation delivered to your inbox. No fluff, just actionable takeaways.
             </p>
             <form
               name="newsletter"
