--- a/minimal/projects.html
+++ b/minimal/projects.html
@@ -271,200 +271,26 @@
         </p>
       </section>
 
-      <section id="case-studies" class="py-16">
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="100"
-          >
-            <span class="text-sm font-semibold text-primary">CASE STUDY</span>
-            <h3 class="text-xl font-semibold mt-2">
-              Demand Forecasting for "UrbanHarvest"
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Outcome:</strong> Delivered a ranked list
-              of neighborhoods with a 75% confidence score, saving an estimated
-              $50k in a potential failed launch.
-            </p>
-            <div class="mt-4 flex flex-wrap items-center gap-2">
-              <span class="pill text-xs">7 Days</span>
-              <span class="pill text-xs">$50k Saved</span>
-              <span class="pill text-xs">75% Confidence</span>
-            </div>
-            <a
-              href="project-context.html"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="200"
-          >
-            <span class="text-sm font-semibold text-primary">WORKFLOW MVP</span>
-            <h3 class="text-xl font-semibold mt-2">
-              🛰️ Spatial QA & Monitoring
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Impact:</strong> Reduced manual QA time
-              by 60% and caught 3 critical issues before they became expensive
-              problems.
-            </p>
-            <div class="mt-4 flex flex-wrap items-center gap-2">
-              <span class="pill text-xs">Computer Vision</span>
-              <span class="pill text-xs">60% Time Saved</span>
-            </div>
-            <a
-              href="project-context.html"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="300"
-          >
-            <span class="text-sm font-semibold text-primary">AUTOMATION</span>
-            <h3 class="text-xl font-semibold mt-2">
-              ⚙️ Field Ops Digitization
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Result:</strong> 100% digital compliance
-              tracking, 40% faster reporting, and eliminated 12 hours/week of
-              manual data entry.
-            </p>
-            <div class="mt-4 flex flex-wrap items-center gap-2">
-              <span class="pill text-xs">Digital Forms</span>
-              <span class="pill text-xs">40% Faster</span>
-              <span class="pill text-xs">12hr/week Saved</span>
-            </div>
-            <a
-              href="project-context.html"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="100"
-          >
-            <span class="text-sm font-semibold text-primary"
-              >AI EXPERIMENT</span
-            >
-            <h3 class="text-xl font-semibold mt-2">
-              Automated Customer Support Triage
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Outcome:</strong> Developed a model that
-              categorizes 95% of inbound tickets accurately, routing them to the
-              correct department instantly.
-            </p>
-            <div class="mt-4 flex flex-wrap items-center gap-2">
-              <span class="pill text-xs">NLP</span>
-              <span class="pill text-xs">95% Accuracy</span>
-              <span class="pill text-xs">Support Ops</span>
-            </div>
-            <a
-              href="project-context.html"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
-          <article
-            class="glass rounded-2xl p-7 interactive-hover"
-            data-aos="flip-left"
-            data-aos-delay="200"
-          >
-            <span class="text-sm font-semibold text-primary"
-              >DUE DILIGENCE</span
-            >
-            <h3 class="text-xl font-semibold mt-2">
-              📈 Tech Teardown for Series A Investor
-            </h3>
-            <p class="text-muted text-sm mt-3">
-              <strong class="text-ink">Impact:</strong> Identified critical
-              scalability risks and a security vulnerability, informing a
-              revised valuation and investment terms.
-            </p>
-            <div class="mt-4 flex flex-wrap items-center gap-2">
-              <span class="pill text-xs">1-Week Sprint</span>
-              <span class="pill text-xs">Risk Analysis</span>
-            </div>
-            <a
-              href="project-context.html"
-              class="text-sm text-primary font-semibold mt-4 inline-flex items-center gap-1 hover:gap-2 transition-all"
-              >Read More
-              <svg
-                class="w-4 h-4"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"
-                />
-              </svg>
-            </a>
-          </article>
+      <section class="mb-12" data-aos="fade-up">
+        <div
+          id="filters"
+          class="flex flex-wrap items-center justify-center gap-3"
+        ></div>
+      </section>
+
+      <section
+        id="projects-container"
+        class="opacity-0 transition-opacity duration-500"
+      >
+        <div id="featured-project-container" class="mb-12"></div>
+        <div
+          id="projects-grid"
+          class="grid md:grid-cols-2 lg:grid-cols-3 gap-6"
+        ></div>
+        <div id="no-results" class="hidden text-center py-20">
+          <p class="text-2xl text-muted">
+            No projects found for this category.
+          </p>
         </div>
       </section>
     </main>
@@ -561,7 +387,158 @@
         </svg>
       </button>
     </div>
+
     <script async defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./script.js" defer></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", async () => {
+        let allProjects = [];
+        const filtersContainer = document.getElementById("filters");
+        const featuredContainer = document.getElementById(
+          "featured-project-container"
+        );
+        const gridContainer = document.getElementById("projects-grid");
+        const noResultsContainer = document.getElementById("no-results");
+        const projectsContainer = document.getElementById("projects-container");
+
+        const renderProjects = (filter = "All") => {
+          featuredContainer.innerHTML = "";
+          gridContainer.innerHTML = "";
+
+          const filteredProjects =
+            filter === "All"
+              ? allProjects
+              : allProjects.filter((p) => p.category === filter);
+
+          if (filteredProjects.length === 0) {
+            noResultsContainer.classList.remove("hidden");
+            gridContainer.classList.add("hidden");
+            featuredContainer.classList.add("hidden");
+          } else {
+            noResultsContainer.classList.add("hidden");
+            gridContainer.classList.remove("hidden");
+            featuredContainer.classList.remove("hidden");
+          }
+
+          filteredProjects.forEach((project, index) => {
+            if (index === 0 && filter === "All") {
+              const featuredHTML = `
+                        <a href="project-context.html?slug=${
+                          project.slug
+                        }" class="block glass rounded-2xl md:grid md:grid-cols-2 gap-8 items-center interactive-hover overflow-hidden" data-aos="fade-up">
+                            <div class="aspect-video md:aspect-auto h-full">
+                                <img src="${project.heroImage}" alt="${
+                project.title
+              }" class="project-card-image h-full w-full rounded-t-2xl md:rounded-l-2xl md:rounded-t-none">
+                            </div>
+                            <div class="p-8">
+                                <span class="text-sm font-semibold text-primary">${project.category.toUpperCase()}</span>
+                                <h2 class="text-2xl md:text-3xl font-bold mt-2">${
+                                  project.title
+                                } <span class="gtext">${
+                project.clientName
+              }</span></h2>
+                                <p class="text-muted text-sm mt-3">${
+                                  project.tagline
+                                }</p>
+                                <div class="mt-4 flex flex-wrap items-center gap-2">
+                                    ${project.stats
+                                      .map(
+                                        (stat) =>
+                                          `<span class="pill text-xs">${
+                                            stat.value
+                                          } ${stat.label.split(" ")[0]}</span>`
+                                      )
+                                      .join("")}
+                                </div>
+                            </div>
+                        </a>`;
+              featuredContainer.innerHTML = featuredHTML;
+            } else {
+              const cardHTML = `
+                        <a href="project-context.html?slug=${
+                          project.slug
+                        }" class="block glass rounded-2xl interactive-hover overflow-hidden" data-aos="fade-up" data-aos-delay="${
+                index * 100
+              }">
+                            <div class="overflow-hidden"><img src="${
+                              project.heroImage
+                            }" alt="${
+                project.title
+              }" class="project-card-image"></div>
+                            <div class="p-7">
+                                <span class="text-sm font-semibold text-primary">${project.category.toUpperCase()}</span>
+                                <h3 class="text-xl font-semibold mt-2">${
+                                  project.title
+                                } ${project.clientName}</h3>
+                                <p class="text-muted text-sm mt-3">${
+                                  project.tagline
+                                }</p>
+                                <div class="mt-4 flex flex-wrap items-center gap-2">
+                                     ${project.stats
+                                       .slice(0, 2)
+                                       .map(
+                                         (stat) =>
+                                           `<span class="pill text-xs">${stat.value}</span>`
+                                       )
+                                       .join("")}
+                                </div>
+                            </div>
+                        </a>`;
+              gridContainer.innerHTML += cardHTML;
+            }
+          });
+
+          setTimeout(() => {
+            AOS.refresh();
+          }, 100);
+        };
+
+        const setupFilters = () => {
+          const categories = [
+            "All",
+            ...new Set(allProjects.map((p) => p.category)),
+          ];
+          filtersContainer.innerHTML = categories
+            .map(
+              (cat) =>
+                `<button class="filter-btn ${
+                  cat === "All" ? "active" : ""
+                }" data-filter="${cat}">${cat}</button>`
+            )
+            .join("");
+
+          filtersContainer.addEventListener("click", (e) => {
+            if (e.target.tagName === "BUTTON") {
+              const filter = e.target.dataset.filter;
+
+              filtersContainer
+                .querySelectorAll("button")
+                .forEach((btn) => btn.classList.remove("active"));
+              e.target.classList.add("active");
+
+              renderProjects(filter);
+            }
+          });
+        };
+
+        try {
+          const response = await fetch("projects.json");
+          allProjects = await response.json();
+          projectsContainer.style.opacity = 1;
+          setupFilters();
+          renderProjects();
+          AOS.init({
+            duration: 700,
+            once: true,
+            offset: 50,
+          });
+        } catch (error) {
+          console.error("Failed to load projects:", error);
+          projectsContainer.innerHTML = `<div class="text-center py-20"><p class="text-2xl text-muted">Could not load projects.</p></div>`;
+          projectsContainer.style.opacity = 1;
+        }
+      });
+    </script>
   </body>
 </html>
