--- a/advanced/dashboard.html
+++ b/advanced/dashboard.html
@@ -87,7 +87,7 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="min-h-screen">
     <div id="cursor-dot"></div>
@@ -211,6 +211,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="/scripts/main.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </body>
 </html>
