--- a/advanced/post.html
+++ b/advanced/post.html
@@ -87,7 +87,7 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="min-h-screen">
     <div id="cursor-dot"></div>
@@ -223,57 +223,59 @@
         </div>
       </div>
     </header>
-    <main id="blog-posts" class="pt-32 pb-20">
-      <div class="container mx-auto px-6 md:px-12">
-        <div class="text-center max-w-3xl mx-auto" data-aos="fade-up">
-          <h1 class="text-4xl md:text-5xl font-extrabold mb-4 gradient-text">
-            Founder Insights
-          </h1>
-          <p class="text-xl text-text-secondary">
-            Practical advice for early-stage founders navigating the startup
-            journey.
-          </p>
-        </div>
-        <div
-          class="my-16 max-w-4xl mx-auto"
-          data-aos="fade-up"
-          data-aos-delay="100"
-        >
-          <div class="relative w-full mb-6">
-            <input
-              type="text"
-              id="search-input"
-              placeholder="Search articles by title, tag, or keyword..."
-              class="w-full pl-12 pr-4 py-4 bg-background-alt border border-default rounded-full focus:outline-none focus:ring-2 focus:ring-primary text-lg"
-            />
-            <svg
-              class="w-6 h-6 absolute left-4 top-1/2 -translate-y-1/2 text-text-secondary"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-              />
-            </svg>
-          </div>
+    <main class="pt-32 pb-20" id="blog-body">
+      <div id="post-container">
+        <article id="post-content" class="container mx-auto px-6 md:px-12">
+          <a
+            href="blog.html"
+            class="inline-flex items-center gap-2 text-text-secondary hover:text-accent mb-8"
+          >
+            &larr; Back to Insights
+          </a>
+          <header
+            class="max-w-3xl mx-auto text-center mb-16"
+            data-aos="fade-up"
+          >
+            <div
+              id="post-category"
+              class="inline-block bg-primary/10 text-primary text-sm font-semibold px-4 py-1 rounded-full mb-6"
+            ></div>
+            <h1
+              id="post-title"
+              class="text-4xl md:text-5xl font-extrabold mb-4"
+            ></h1>
+            <p id="post-meta" class="text-lg text-text-primary"></p>
+          </header>
           <div
-            id="category-filters"
-            class="flex flex-wrap gap-3 justify-center"
+            id="post-body"
+            class="prose prose-invert max-w-3xl mx-auto text-lg space-y-6"
           ></div>
-        </div>
-        <div
-          id="blog-grid"
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
-        ></div>
-        <div id="no-results" class="hidden text-center py-16">
-          <h2 class="text-2xl font-semibold mb-2">No Articles Found</h2>
-          <p class="text-text-secondary">
-            Try adjusting your search or filter criteria.
+          <div
+            class="spotlight-card card-hover max-w-3xl mx-auto text-center mt-16 p-8 bg-background-alt border border-default rounded-2xl"
+            data-aos="zoom-in"
+          >
+            <h2 class="text-3xl font-bold mb-4">Ready to Optimize?</h2>
+            <p class="text-text-primary mb-6">
+              Let's discuss how we can help you slash cloud costs and get
+              security-ready for your next growth phase.
+            </p>
+            <a
+              href="index.html#contact"
+              class="btn btn-primary px-6 py-3 rounded-lg text-white font-semibold"
+              >Contact Us</a
+            >
+          </div>
+        </article>
+        <div id="post-not-found" class="hidden text-center py-16">
+          <h2 class="text-3xl font-bold mb-4">Article Not Found</h2>
+          <p class="text-text-secondary mb-8">
+            Sorry, we couldn't find the article you're looking for.
           </p>
+          <a
+            href="blog.html"
+            class="btn bg-primary px-6 py-3 rounded-lg text-white font-semibold"
+            >Return to Insights</a
+          >
         </div>
       </div>
     </main>
@@ -435,6 +437,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="/scripts/blog.js" defer></script>
-    <script src="/scripts/main.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </body>
 </html>
